combine search chg

--- a/src/main/resources/templates/search/searchMatchingList.html
+++ b/src/main/resources/templates/search/searchMatchingList.html
@@ -173,29 +173,70 @@
         		return false;
         	}
 
-    		var chgText = text.val().trim();
-    		chgText = chgText.replace(/ +/g, " ");
-    		chgText = chgText.replace(/%/gi, '%25');
-    		chgText = chgText.replace(/\\/gi, '%5C');
+    		var chgText = text.val();
+    		chgText = searchStringArrange(chgText);
     		
-    		var searchData = {
-    				sid: "[[${session.studentInfo.getSid()}]]",
-    				word: chgText
-    		};
+    		var afterWord = searchStringChange(text.val());
     		
-        	$.ajax ({
-        		type: "POST",
-        		url: "/yu/searchWordInsert",
-                data: searchData,
-                success: function (data) {
-                }, error: function () {
-                    alert("error");
-                }
-        	});
+    		if(afterWord.length != 0) {
+    			var searchData = {
+    					sid: "[[${session.studentInfo.getSid()}]]",
+    					word: afterWord
+    			};
+    			
+    	    	$.ajax ({
+    	    		type: "POST",
+    	    		url: "/yu/searchWordInsert",
+    	            data: searchData,
+    	            success: function (data) {
+    	            }, error: function () {
+    	                alert("error");
+    	            }
+    	    	});
+    		}
 
         	location.href = "/yu/search/searchMatchingList?boardtype=" + boardtype + "&text=" + 
         			chgText + "&date=" + date.val() + "&option=" + option.val();
         }
+        
+    	function searchStringArrange(str) {
+    		str = str.trim();
+    		str = str.replace(/ +/g, " ");
+    		
+    		str = str.replace(/\%/gi, '%25');
+    		
+    		str = str.replace(/\`/gi, '%60');
+    		str = str.replace(/\!/gi, '%21');
+    		str = str.replace(/\@/gi, '%40');
+    		str = str.replace(/\#/gi, '%23');
+    		str = str.replace(/\$/gi, '%24');
+    		str = str.replace(/\^/gi, '%5E');
+    		str = str.replace(/\&/gi, '%26');
+    		str = str.replace(/\(/gi, '%28');
+    		str = str.replace(/\)/gi, '%29');
+    		str = str.replace(/\=/gi, '%3D');
+    		str = str.replace(/\\/gi, '%5C');
+    		str = str.replace(/\|/gi, '%7C');
+    		str = str.replace(/\[/gi, '%5B');
+    		str = str.replace(/\]/gi, '%5D');
+    		str = str.replace(/\{/gi, '%7B');
+    		str = str.replace(/\}/gi, '%7D');
+    		str = str.replace(/\,/gi, '%2C');
+    		str = str.replace(/\//gi, '%2F');
+    		str = str.replace(/\?/gi, '%3F');
+    		str = str.replace(/\:/gi, '%3A');
+    		str = str.replace(/\'/gi, '%27');
+    		
+    		return str;
+    	}
+    	
+    	function searchStringChange(str) {
+    		var regExp = /[\{\}\[\]\/?.,;:|\)*~`!^\-+<>@\#$%&\\\=\(\'\"]/gi;
+    		var chgString = str;
+    		chgString = chgString.replace(regExp, "");
+    		
+    		return chgString;
+    	}
     </script>
 </th:block>
 </html>
