--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -295,6 +295,7 @@
 		str = str.replace(/\}/gi, '%7D');
 		str = str.replace(/\,/gi, '%2C');
 		str = str.replace(/\//gi, '%2F');
+		str = str.replace(/\;/gi, '%3B');
 		str = str.replace(/\?/gi, '%3F');
 		str = str.replace(/\:/gi, '%3A');
 		str = str.replace(/\'/gi, '%27');
