--- a/src/main/resources/templates/admin/adminBoardList.html
+++ b/src/main/resources/templates/admin/adminBoardList.html
@@ -93,7 +93,7 @@
                 </select>
               </div>
               <!-- 검색어 입력창 -->
-                <input id="searchBox" class="form-control mr-sm-2" onKeypress = "if(event.keyCode==13) {return searchBoard()}" placeholder="검색어를 입력해 주세요" style="border-radius: 5px; border: 2px solid #4a57a8;">
+                <input id="searchBox" class="form-control mr-sm-2" maxlength = "100" onKeypress = "if(event.keyCode==13) {return searchBoard()}" placeholder="검색어를 입력해 주세요" style="border-radius: 5px; border: 2px solid #4a57a8;">
                <img th:src="@{/images/돋보기.png}" width="100%" class="btn glass" type="button" onClick="return searchBoard()">
                </form>
            </div>
@@ -156,14 +156,44 @@
         		return false;
         	}
 
-    		var chgText = text.val().trim();
-    		chgText = chgText.replace(/ +/g, " ");
-    		chgText = chgText.replace(/%/gi, '%25');
-    		chgText = chgText.replace(/\\/gi, '%5C');
+    		var chgText = text.val();
+    		chgText = searchStringArrange(chgText);
 
         	location.href = "/yu/admin/searchBoardList?boardtype=" + boardtype + "&text=" +
         			chgText + "&date=" + date.val() + "&option=" + option.val();
         }
+        
+    	function searchStringArrange(str) {
+    		str = str.trim();
+    		str = str.replace(/ +/g, " ");
+    		
+    		str = str.replace(/\%/gi, '%25');
+    		
+    		str = str.replace(/\`/gi, '%60');
+    		str = str.replace(/\!/gi, '%21');
+    		str = str.replace(/\@/gi, '%40');
+    		str = str.replace(/\#/gi, '%23');
+    		str = str.replace(/\$/gi, '%24');
+    		str = str.replace(/\^/gi, '%5E');
+    		str = str.replace(/\&/gi, '%26');
+    		str = str.replace(/\(/gi, '%28');
+    		str = str.replace(/\)/gi, '%29');
+    		str = str.replace(/\=/gi, '%3D');
+    		str = str.replace(/\\/gi, '%5C');
+    		str = str.replace(/\|/gi, '%7C');
+    		str = str.replace(/\[/gi, '%5B');
+    		str = str.replace(/\]/gi, '%5D');
+    		str = str.replace(/\{/gi, '%7B');
+    		str = str.replace(/\}/gi, '%7D');
+    		str = str.replace(/\,/gi, '%2C');
+    		str = str.replace(/\//gi, '%2F');
+    		str = str.replace(/\;/gi, '%3B');
+    		str = str.replace(/\?/gi, '%3F');
+    		str = str.replace(/\:/gi, '%3A');
+    		str = str.replace(/\'/gi, '%27');
+    		
+    		return str;
+    	}
     </script>
 </th:block>
 </html>
