--- a/src/main/resources/templates/admin/adminLectureEvaluationList.html
+++ b/src/main/resources/templates/admin/adminLectureEvaluationList.html
@@ -160,14 +160,13 @@
         		return false;
         	}
 
-        	var chgText = text.val().trim();
-    		chgText = chgText.replace(/ +/g, " ");
-    		chgText = chgText.replace(/%/gi, '%25');
-    		chgText = chgText.replace(/\\/gi, '%5C');
+    		var chgText = text.val();
+    		chgText = searchStringArrange(chgText);
 
         	location.href = "/yu/admin/searchLectureEvaluationList?text=" +
         			chgText + "&date=" + date.val() + "&option=" + option.val();
         }
+        
         function deleteLecture(lno){
                 if(confirm("게시글을 삭제하시겠습니까?")) {
                     $.ajax({
@@ -191,6 +190,38 @@
                 }
                 else return false;
         }
+        
+    	function searchStringArrange(str) {
+    		str = str.trim();
+    		str = str.replace(/ +/g, " ");
+    		
+    		str = str.replace(/\%/gi, '%25');
+    		
+    		str = str.replace(/\`/gi, '%60');
+    		str = str.replace(/\!/gi, '%21');
+    		str = str.replace(/\@/gi, '%40');
+    		str = str.replace(/\#/gi, '%23');
+    		str = str.replace(/\$/gi, '%24');
+    		str = str.replace(/\^/gi, '%5E');
+    		str = str.replace(/\&/gi, '%26');
+    		str = str.replace(/\(/gi, '%28');
+    		str = str.replace(/\)/gi, '%29');
+    		str = str.replace(/\=/gi, '%3D');
+    		str = str.replace(/\\/gi, '%5C');
+    		str = str.replace(/\|/gi, '%7C');
+    		str = str.replace(/\[/gi, '%5B');
+    		str = str.replace(/\]/gi, '%5D');
+    		str = str.replace(/\{/gi, '%7B');
+    		str = str.replace(/\}/gi, '%7D');
+    		str = str.replace(/\,/gi, '%2C');
+    		str = str.replace(/\//gi, '%2F');
+    		str = str.replace(/\;/gi, '%3B');
+    		str = str.replace(/\?/gi, '%3F');
+    		str = str.replace(/\:/gi, '%3A');
+    		str = str.replace(/\'/gi, '%27');
+    		
+    		return str;
+    	}
     </script>
 </th:block>
 </html>
