--- a/src/main/resources/templates/search/searchLectureEvaluationList.html
+++ b/src/main/resources/templates/search/searchLectureEvaluationList.html
@@ -166,7 +166,10 @@
     		$("#tbody").append(tr);
     	}
 
-        $("#searchBox").val("[[${text}]]");
+    	var text = "[[${text}]]";
+    	text = text.replace(/&amp;/gi, '&');
+
+        $("#searchBox").val(text);
         $("#searchBox").focus();
         $("#searchDate").val("[[${date}]]").prop("selected", true);
         $("#searchType").val("[[${type}]]").prop("selected", true);
@@ -302,6 +305,7 @@
     		str = str.replace(/\}/gi, '%7D');
     		str = str.replace(/\,/gi, '%2C');
     		str = str.replace(/\//gi, '%2F');
+    		str = str.replace(/\;/gi, '%3B');
     		str = str.replace(/\?/gi, '%3F');
     		str = str.replace(/\:/gi, '%3A');
     		str = str.replace(/\'/gi, '%27');
