--- a/src/main/resources/templates/fragments/body.html
+++ b/src/main/resources/templates/fragments/body.html
@@ -95,8 +95,8 @@
 
 <div class="row flex">
 	<div class="col-2 item">
-		<a th:if="${session.studentInfo} == null" href="/yu/index" style="padding-left: 20px;"><img th:src="@{/images/당첨.png}" style="max-width: 100%; height: auto;"></a>
-		<a th:unless="${session.studentInfo} == null" href="/yu/login" style="padding-left: 20px;"><img th:src="@{/images/당첨.png}" style="max-width: 100%; height: auto;"></a>
+		<a th:if="${session.studentInfo} == null" href="/yu/index" style="padding-left: 40px;"><img th:src="@{/images/나만따라YU.png}" style="max-width: 100%; height: auto;"></a>
+		<a th:unless="${session.studentInfo} == null" href="/yu/login" style="padding-left: 40px;"><img th:src="@{/images/나만따라YU.png}" style="max-width: 100%; height: auto;"></a>
 	</div>
 	<div class="col-7 item">
 		<div id="clock" style="margin-left:5px;"></div>
