--- a/src/main/resources/static/css/bootstrap.css
+++ b/src/main/resources/static/css/bootstrap.css
@@ -10798,7 +10798,7 @@ textarea {
   color: #fff;
 }
 
-.bottom-button-wrap .btn-grey {
+.bottom-button-wrap .btn-grey, .btn-grey {
   width: 85px;
   height: 40px;
   border-radius: 5px;
@@ -11251,6 +11251,54 @@ button.close5 {
   position: relative;
 }
 
+/* 11.15 백경열 채팅창 css추가*/
+.msg_container_base{
+  background: #e5e5e5;
+  margin: 0;
+  padding: 0 10px 10px;
+  max-height: relative;
+  overflow-x:hidden;
+}
+.top-bar {
+  background: #666;
+  color: white;
+  padding: 10px;
+  position: relative;
+  overflow: hidden;
+}
+.msg{
+    padding-bottom:20px !important;
+    margin-right:0;
+}
+.messages {
+  background: white;
+  padding: 10px;
+  border-radius: 2px;
+  box-shadow: 0 1px 2px rgba(0, 0, 0, 0.2);
+  max-width:100%;
+}
+.messages > p {
+    font-size: 13px;
+    margin: 0 0 0.2rem 0;
+  }
 
+.msg_container {
+    padding: 10px;
+    overflow: hidden;
+    display: flex;
+}
+.avatar{
+  position: relative;
+}
+
+.base_sent .base_receive {
+  justify-content: flex-end;
+  align-items: flex-end;
+}
+
+#chatimg {
+  display: block;
+  width: 100%;
+}
 
 /*# sourceMappingURL=bootstrap.css.map */
