--- a/src/main/resources/templates/studentInfo/studentRegistration.html
+++ b/src/main/resources/templates/studentInfo/studentRegistration.html
@@ -392,7 +392,7 @@
                     </div>
             </div>
                 <div class="modal-footer">
-                    <button type="button" class="btn btn-primary" data-dismiss="modal">확인</button>
+                    <button type="button" class="btn btn-blue" data-dismiss="modal">확인</button>
                 </div>
         </div>
         </div>
@@ -417,7 +417,7 @@
                             <div class="form-group">
                                 <label for="department" class="col-form-label"><h5>학과 등록</h5></label>
                                 <input type="text" id="department" name="department" class="form-control" placeholder="학과 선택" required="required" readonly/>
-                                <button type="button" class="btn btn-primary" onclick="departmentOpen()">선택</button>
+                                <button type="button" class="btn btn-blue" onclick="departmentOpen()">선택</button>
                             </div>
                         </div>
                     </div>
@@ -443,7 +443,7 @@
                             <div class="form-group">
                                 <label for="phoneNumber" class="col-form-label"><h5>휴대폰 번호</h5></label>
                                 <input type="text" id="phonenum" name="phonenum" class="form-control" placeholder="번호 입력" required="required"/>
-                                <button type="button" id="sendPhoneNumber" class="btn btn-primary">인증받기</button>
+                                <button type="button" id="sendPhoneNumber" class="btn btn-blue">인증받기</button>
                             </div>
                         </div>
                     </div>
@@ -453,7 +453,7 @@
                             <div class="form-group">
                                 <label for="certificationNumber" class="col-form-label"><h5>인증 번호</h5></label>
                                 <input type="text" id="CertifiedNumber" class="form-control" placeholder="인증번호 입력" required="required"/>
-                                <button type="button" id="checkBtn" class="btn btn-primary">체크</button>
+                                <button type="button" id="checkBtn" class="btn btn-blue">체크</button>
                             </div>
                         </div>
                     </div>
@@ -491,8 +491,8 @@
                             </div>
                         </div>
                         <div id="button_group" class="btn-form">
-                            <button type="submit" class="btn btn-primary float-right" style="margin-right:5px;">등록</button>
-                            <button class="btn btn-primary float-right" style="margin-right:5px;" onclick="location.href='/yu/logout'">취소</button>
+                            <button type="submit" class="btn btn-blue float-right" style="margin-right:5px;">등록</button>
+                            <button class="btn btn-grey float-right" style="margin-right:5px;" onclick="location.href='/yu/logout'">취소</button>
                         </div>
                     </div>
                 </form>
