--- a/src/main/resources/templates/lectureevaluation/lectureEvaluationInsert.html
+++ b/src/main/resources/templates/lectureevaluation/lectureEvaluationInsert.html
@@ -44,8 +44,8 @@
               <textarea class="form-control nonesize" id="content" name="content" maxlength="500" placeholder="내용을 입력하시오"></textarea>
             </div>
                     <div id="button_group" class="btn-form">
-                      <button type="button" class="btn btn-primary" onclick="lectureUpdate()" style="margin-right:5px;">등록</button>
-                      <button type="button" class="btn btn-secondary" onclick="location.href='/yu/lectureevaluation/lectureevaluation'">취소</button>
+                      <button type="button" class="btn btn-grey" onclick="location.href='/yu/lectureevaluation/lectureevaluation'">취소</button>
+                      <button type="button" class="btn btn-blue" onclick="lectureUpdate()" style="margin-right:5px;">등록</button>
                     </div>
         </div>
       </div>
