--- a/src/main/resources/templates/studentInfo/studentRegistration.html
+++ b/src/main/resources/templates/studentInfo/studentRegistration.html
@@ -443,7 +443,7 @@
                             <div class="form-group">
                                 <label for="phoneNumber" class="col-form-label"><h5>휴대폰 번호</h5></label>
                                 <input type="text" id="phonenum" name="phonenum" class="form-control" placeholder="번호 입력" required="required"/>
-                                <button type="button" id="sendPhoneNumber" class="btn btn-blue">인증받기</button>
+                                <button type="button" id="sendPhoneNumber" class="btn btn-blue" style="width:100px">인증받기</button>
                             </div>
                         </div>
                     </div>
