--- a/src/main/resources/templates/matching/matchingProceeding.html
+++ b/src/main/resources/templates/matching/matchingProceeding.html
@@ -22,11 +22,11 @@
 
                         <div class="form-group">
                             <label for="account" class="col-form-label"><h5>계좌번호</h5></label>
-                            <input type="text" id="account" name="account" class="form-control" placeholder="닉네임 입력" required="required" />
+                            <input type="text" id="account" name="account" class="form-control" placeholder="계좌번호 입력" required="required" />
                         </div>
                         <div class="form-group">
-                            <label for="accountname" class="col-form-label"><h5> 계좌이름 </h5></label>
-                            <input type="text" id="accountname" name="accountname" class="form-control" placeholder="닉네임 입력" required="required" />
+                            <label for="accountname" class="col-form-label"><h5> 계좌주 </h5></label>
+                            <input type="text" id="accountname" name="accountname" class="form-control" placeholder="성명 입력" required="required" />
                         </div>
                     </form>
                 </div>
@@ -104,7 +104,7 @@
         var webSocket;
         var nickname="[[${session.studentInfo.getNickname()}]]";
         var roomId = "[[${chatRoom.roomId}]]";
-        webSocket = new WebSocket("ws://localhost:8080/chat");
+        webSocket = new WebSocket("ws://39.121.250.95:8080/chat");
         webSocket.onopen = onOpen;
         webSocket.onmessage = onMessage;
         window.onbeforeunload = function(){
